# Game_Prototype

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/characters/abstract/: entity.cpp  entity.h  game_character.cpp  game_character.h
src/configuration/: game_window.h
src/configuration/sprites/: sprite_matrix.h
src/configuration/world/: direction.h
src/resources/maps/: map1.json
src/resources/shaders/: crt.fs
src/world/: tile.cpp  tile.h
